--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,34 @@
-# Auto detect text files and perform LF normalization
+# 自动检测文本文件并规范化行尾
 * text=auto
+
+# 确保这些文件始终使用 LF 行尾
+*.html text eol=lf
+*.css text eol=lf
+*.js text eol=lf
+*.json text eol=lf
+*.md text eol=lf
+*.txt text eol=lf
+
+# 明确声明二进制文件
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.svg binary
+*.woff binary
+*.woff2 binary
+*.ttf binary
+*.eot binary
+
+# 排除某些文件或目录
+.gitattributes export-ignore
+.gitignore export-ignore
+README.md export-ignore
+LICENSE export-ignore
+
+# 设置 diff 和 merge 策略
+*.html diff=html
+*.css diff=css
+*.js diff=javascript
+*.json diff=json
